demo/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo
  labels:
    app: pod-demo
spec:
  containers:
  - name: pod-demo
    image: operry/demo-app-win-mvc:1.0

    #resources:
    #  limits:
    #    memory: 512Mi
    #    cpu: 1
    #  requests:
    #    memory: 128Mi
    #    cpu: 500mi

    ports:
    - containerPort: 8000
      hostPort: 8000
  nodeSelector:
    beta.kubernetes.io/os: windows
