demo/pod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-service
  labels:
    app: pod-service
    owner: some-team 
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: pod-demo
